--- a/src/main/webapp/resources/css/main.css
+++ b/src/main/webapp/resources/css/main.css
@@ -96,7 +96,7 @@ a:link:hover, a:visited:hover  {
     border-width: 2px !important;
 }
 
-/*satrapu March 22nd, 2014 - added this class to support PrimeFaces calendar */
+/*satrapu March 22nd, 2014 - added this class to highlight PrimeFaces calendar containing invalid value*/
 *[class="invalid"] input {
     border-color: #ff0000 !important;
     border-width: 2px !important;
