--- a/src/main/webapp/resources/components/inputTextarea.xhtml
+++ b/src/main/webapp/resources/components/inputTextarea.xhtml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:c="http://xmlns.jcp.org/jsp/jstl/core"
       xmlns:composite="http://java.sun.com/jsf/composite"
-      xmlns:p="http://primefaces.org/ui"
-      xmlns:my="http://java.sun.com/jsf/composite/components">
+      xmlns:my="http://java.sun.com/jsf/composite/components"
+      xmlns:p="http://primefaces.org/ui">
     <composite:interface>
         <composite:attribute name="componentId" required="true"/>
         <composite:attribute name="value" required="true"/>
         <composite:attribute name="label" required="true"/>
         <composite:attribute name="required" required="false" default="false"/>
+        <composite:attribute name="readonly" required="false" default="false"/>
         <composite:attribute name="rows" required="false" default="5"/>
         <composite:attribute name="cols" required="false" default="25"/>
     </composite:interface>
@@ -16,17 +18,26 @@
                             value="#{cc.attrs.value}"
                             label="#{cc.attrs.label}"
                             required="#{cc.attrs.required}">
-            <p:inputTextarea id="#{cc.attrs.componentId}"
-                             value="#{cc.attrs.value}"
-                             required="#{cc.attrs.required}"
-                             requiredMessage="#{msg['global.fields.required']}"
-                             styleClass="#{not component.valid ? 'invalid' : ''}"
-                             rows="#{cc.attrs.rows}"
-                             cols="#{cc.attrs.cols}">
-                <p:ajax event="blur"
-                        immediate="true"
-                        update="#{cc.attrs.componentId}Editor"/>
-            </p:inputTextarea>
+            <c:choose>
+                <c:when test="#{cc.attrs.readonly}">
+                    <p:outputLabel id="#{cc.attrs.componentId}" 
+                                   value="#{cc.attrs.value}"/>
+                </c:when>
+                <c:otherwise>
+                    <p:inputTextarea id="#{cc.attrs.componentId}"
+                                     value="#{cc.attrs.value}"
+                                     required="#{cc.attrs.required}"
+                                     readonly="#{cc.attrs.readonly}"
+                                     requiredMessage="#{msg['global.fields.required']}"
+                                     styleClass="#{not component.valid ? 'invalid' : ''}"
+                                     rows="#{cc.attrs.rows}"
+                                     cols="#{cc.attrs.cols}">
+                        <p:ajax event="blur"
+                                immediate="true"
+                                update="#{cc.attrs.componentId}Editor"/>
+                    </p:inputTextarea>
+                </c:otherwise>
+            </c:choose>
         </my:editorContainer>
     </composite:implementation>
 </html>
