--- a/src/main/webapp/resources/templates/menu.xhtml
+++ b/src/main/webapp/resources/templates/menu.xhtml
@@ -18,14 +18,10 @@ limitations under the License.
                 xmlns:h="http://xmlns.jcp.org/jsf/html"
                 xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
     <h:form id="menuForm">
-        <p:menubar>
-            <p:menuitem value="#{msg['menu.login.title']}"
-                        url="/faces/login.xhtml"
-                        rendered="#{not loginHome.userAuthenticated}"/>
-            <p:submenu label="#{msg['menu.account.title']}"
-                       rendered="#{loginHome.userAuthenticated}">
+        <p:menubar rendered="#{currentUser.authenticated}">
+            <p:submenu label="#{msg['menu.account.title']}">
                 <p:menuitem value="#{msg['menu.account.password.title']}"
-                            url="/faces/account/password.xhtml"/>
+                            url="/secured/account/password.xhtml"/>
                 <p:menuitem value="#{msg['menu.account.logout.title']}">
                     <p:commandLink value="#{msg['menu.account.logout.title']}"
                                    action="#{loginHome.logout}"
@@ -34,9 +30,10 @@ limitations under the License.
                 </p:menuitem>
             </p:submenu>
             <p:submenu label="#{msg['menu.admin.title']}"
-                       rendered="#{loginHome.userAuthenticated}">
+                       rendered="#{currentUser.adminMenuVisible}">
                 <p:menuitem value="#{msg['menu.admin.persons.title']}"
-                            url="/faces/admin/persons/list.xhtml"/>
+                            url="/secured/persons/list.xhtml"
+                            rendered="#{currentUser.personsMenuVisible}"/>
             </p:submenu>
         </p:menubar>
     </h:form>
