Added support for displaying the current JSF project stage, except when it is set to "Production".

--- a/src/main/webapp/resources/templates/page.xhtml
+++ b/src/main/webapp/resources/templates/page.xhtml
@@ -32,6 +32,7 @@ limitations under the License.
                 <f:facet name="header">
                     <p:outputPanel styleClass="header">
                         #{msg['application.title']}
+			#{applicationSettings.titleSuffix}
                     </p:outputPanel>
                 </f:facet>
                 <f:facet name="footer">
