Made page header clickable. When the page header is clicked, the user is taken to his home page.

--- a/src/main/webapp/resources/css/main.css
+++ b/src/main/webapp/resources/css/main.css
@@ -22,6 +22,10 @@
     font-weight: bold;
 }
 
+.page .header a{
+    text-decoration: none;
+}
+
 .page .footer{
     text-align: center;
     font-size: 75%;
